--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<div class="container">
-{{message}} + M.W CI/CD
-</div>
+
+<app-header></app-header>
+<app-sidebar></app-sidebar>
+<router-outlet></router-outlet>
