Add styles to main content

--- a/src/app/apiary/components/toolbar/toolbar.component.html
+++ b/src/app/apiary/components/toolbar/toolbar.component.html
@@ -1,5 +1,5 @@
-<mat-toolbar color = "primary">
-    <button mat-button (click)="toggleSidenav.emit()">
+<mat-toolbar color = "primary" >
+    <button mat-button (click)="toggleSidenav.emit()" class="sidenav-toggle">
         <mat-icon>menu</mat-icon>
     </button>
     <span>ApiaryDiary</span>
