--- a/src/app/apiary/components/side-nav/side-nav.component.html
+++ b/src/app/apiary/components/side-nav/side-nav.component.html
@@ -1,21 +1,45 @@
 <mat-sidenav-container class="app-sidenav-container">
-    <mat-sidenav #sidenav class="app-sidenav mat-elevation-z5" [mode]="isScreenSmall ? 'over' : 'side'" [opened]="!isScreenSmall" >
-      <mat-toolbar color = "primary">
-        Menu
-      </mat-toolbar>
-      <mat-list role="list">
-        <mat-list-item role="listitem">Item 1</mat-list-item>
-        <mat-list-item role="listitem">Item 2</mat-list-item>
-        <mat-list-item role="listitem">Item 3</mat-list-item>
-    </mat-list>
-    </mat-sidenav>
-   
-    <div class="app-sidenav-content">
-      <app-toolbar (toggleSidenav)="sidenav.toggle()" ></app-toolbar>
-      <div class="wrapper">
-        <router-outlet></router-outlet>
+  <div>
+  </div>
+  <mat-sidenav #sidenav class="app-sidenav mat-elevation-z15" [mode]="isScreenSmall ? 'over' : 'side'" [opened]="!isScreenSmall" >
+    
+    <div class="box">
+      <div class="row header">
+        <mat-toolbar color = "primary">
+          Menu
+        </mat-toolbar>
       </div>
-      
-    </div>
-  </mat-sidenav-container>
 
+      <div class="row footer">
+        <mat-nav-list style="padding: 0; ">
+
+          <div *ngFor="let user of users | async; let i = index" [attr.data-index]="i">
+            <div *ngIf="i%2 == 0">
+              <mat-list-item class="icon yellow">
+                <!-- <a matLine [routerLink]="['/contactmanager',user.id'">{{user.name}}</a> -->
+
+             </mat-list-item>
+            </div>
+            <div *ngIf="i%2 != 0">
+              <mat-list-item class="icon black">
+                <!-- <a matLine [routerLink]="['/contactmanager',user.id'">{{user.name}}</a> -->
+
+             </mat-list-item>
+            </div>
+          </div>
+            </mat-nav-list>
+      </div>
+      <div class="row content">
+      </div>
+    </div>
+
+  </mat-sidenav>
+
+ 
+  <div class="app-sidenav-content">
+    <app-toolbar (toggleSidenav)="sidenav.toggle()" ></app-toolbar>
+    <div class="wrapper">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</mat-sidenav-container>
