Reorganization and login module

--- a/src/app/containers/apiary/components/side-nav/side-nav.component.scss
+++ b/src/app/containers/apiary/components/side-nav/side-nav.component.scss
@@ -19,15 +19,12 @@
     .mat-drawer-side {
       border: none;
     }
-    :host ::ng-deep .mat-toolbar {
-      background-color: #000000  ;
-    }
-  .icon {
-    color: yellow;
-  }
-  .icon:hover {
-    color: yellow;
-  }
+  // .icon {
+  //   color: yellow;
+  // }
+  // .icon:hover {
+  //   color: yellow;
+  // }
 
   .yellow{
     background-color: yellow;
