--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
 
+@use '~@angular/material' as mat;
+@include mat.core();
+
+$candy-app-primary: mat.define-palette(mat.$grey-palette,900);
+$candy-app-accent:  mat.define-palette(mat.$yellow-palette, A200, A100, A400);
+$candy-app-warn:    mat.define-palette(mat.$red-palette);
+
+$candy-app-theme: mat.define-light-theme(
+    $candy-app-primary, $candy-app-accent, $candy-app-warn);
+
+@include mat.all-component-themes($candy-app-theme);
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
