--- a/src/app/containers/login/login.component.scss
+++ b/src/app/containers/login/login.component.scss
@@ -1,8 +1,17 @@
+$iconWidth: 300px;
 mat-card {
-    max-width: 400px;
     text-align: center;
     background: yellow;
     margin: auto;
+
+    display: flex;
+    @media (max-width:720px){
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        min-width: 100%;
+        min-height: 100%;
+    }
   }
   .container {
     background: black;
@@ -13,4 +22,5 @@ mat-card {
   
   mat-form-field {
     display: block;
+    min-width: $iconWidth;
   }
