--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 @use '~@angular/material' as mat;
+@import "~bootstrap/dist/css/bootstrap.css";
 @include mat.core();
 
 $candy-app-primary: mat.define-palette(mat.$grey-palette,900);
