--- a/src/app/containers/login/login.component.html
+++ b/src/app/containers/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="myContainer">
     <mat-card>
         <mat-card-content>
           <form [formGroup]="form" (ngSubmit)="onSubmit()">
@@ -20,6 +20,7 @@
             </mat-form-field>
             <button mat-raised-button color="primary">Login</button>
           </form>
+          <a mat-list-item class="nav-link" [routerLink]='["/register"]'>Sign up</a>
         </mat-card-content>
       </mat-card>
 </div>
