--- a/src/app/containers/login/login.component.html
+++ b/src/app/containers/login/login.component.html
@@ -1,10 +1,10 @@
 <div class="myContainer">
     <mat-card>
+        <mat-card-title>Log In</mat-card-title>
         <mat-card-content>
           <form [formGroup]="form" (ngSubmit)="onSubmit()">
-            <h2>Log In</h2>
-            <mat-error *ngIf="loginInvalid">
-              The login and password were not recognized
+            <mat-error *ngIf="loginInvalid" style="font-size:9px">
+              The login or password are wrong
             </mat-error>
             <mat-form-field class="full-width-input">
               <input matInput placeholder="Email" formControlName="login" required>
