--- a/src/app/containers/register/register.component.html
+++ b/src/app/containers/register/register.component.html
@@ -1,10 +1,10 @@
 <div class="myContainer">
   <mat-card>
+      <mat-card-title>Sign up with Email</mat-card-title>
       <mat-card-content>
         <form [formGroup]="form" (ngSubmit)="onSubmit()">
-          <h2>Sign up with Email</h2>
-          <mat-error *ngIf="RegisterInvalid">
-            The login and password were not recognized
+          <mat-error *ngIf="registerInvalid" style="font-size:9px">
+            The email and password were not recognized
           </mat-error>
           <mat-form-field class="full-width-input">
             <input matInput placeholder="Email" formControlName="login" required>
@@ -18,8 +18,11 @@
               Please provide a valid password
             </mat-error>
           </mat-form-field>
-          <button mat-raised-button color="primary">Sign up</button>
+          <button  mat-raised-button color="primary">Sign up</button>
         </form>
       </mat-card-content>
     </mat-card>
 </div>
+
+{{form.get('login')!.valid}}
+{{form.valid}}
