--- a/src/app/containers/login/login.component.html
+++ b/src/app/containers/login/login.component.html
@@ -20,7 +20,7 @@
             </mat-form-field>
             <button mat-raised-button color="primary">Login</button>
           </form>
-          <a mat-list-item class="nav-link" [routerLink]='["/register"]'>Sign up</a>
+          <a mat-list-item class="nav-link" [routerLink]='["/register"]' style="color: black;">Sign up</a>
         </mat-card-content>
       </mat-card>
 </div>
