--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,3 +18,6 @@ $candy-app-theme: mat.define-light-theme(
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+.mat-list-base .mat-list-item .mat-list-item-content, .mat-list-base .mat-list-option .mat-list-item-content {
+    justify-content: center;
+}
