--- a/src/app/containers/apiary/components/side-nav/side-nav.component.scss
+++ b/src/app/containers/apiary/components/side-nav/side-nav.component.scss
@@ -22,15 +22,22 @@
   // .icon {
   //   color: yellow;
   // }
-  // .icon:hover {
-  //   color: yellow;
-  // }
+  .svg {
+    -webkit-filter: invert(100%); /* safari 6.0 - 9.0 */
+            filter: invert(100%);
+  }
+
+   .icon:hover {
+     background: darkorange;
+   }
 
   .yellow{
     background-color: yellow;
+    color: black;
   }
   .black{
     background-color: black;
+    color: white;
   }
     .wrapper{
       margin: 50px;
@@ -44,6 +51,7 @@
       display: flex;
       flex-flow: column;
       height: 100%;
+      text-align: center;
     }
 
       .row{
