--- a/src/app/containers/apiary/components/main-content/main-content.component.scss
+++ b/src/app/containers/apiary/components/main-content/main-content.component.scss
@@ -5,7 +5,7 @@
   }
   
   .flex-container > div {
-    background-image: url("img/beehive.png");
+    background-image: url("../../../../../assets/img/beehive.png");
     width: 125px;
 	  height: 125px;
     margin: 10px;
