--- a/src/app/containers/apiary/components/summary/summary.component.html
+++ b/src/app/containers/apiary/components/summary/summary.component.html
@@ -8,17 +8,17 @@
     <table mat-table [dataSource]="dataSource" matSort>
   
       <ng-container matColumnDef="position">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> No. </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Number </th>
         <td mat-cell *matCellDef="let hive"> {{hive.internalNumber}} </td>
       </ng-container>
   
       <ng-container matColumnDef="title">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Title </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Race </th>
         <td mat-cell *matCellDef="let hive"> {{hive.race}} </td>
       </ng-container>
   
       <ng-container matColumnDef="date">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Queen year</th>
         <td mat-cell *matCellDef="let hive"> {{hive.queenBirthDate | date: 'yyyy-MM-dd'}} </td>
       </ng-container>
   
